tests/sema/veo/55_error_duplicate_field.veo
struct Item {
    weight: i32;
    // expected-error@+1: field 'weight' is already defined
    weight: f64;
}
